--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "our-react-chat-app",
   "version": "1.0.0",
-  "description": "",
   "scripts": {
     "build": "parcel build src/index.html",
     "start": "parcel src/index.html",
@@ -18,5 +17,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BlackHeart1992/my--chat-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BlackHeart1992/my--chat-app/issues"
+  },
+  "homepage": "https://github.com/BlackHeart1992/my--chat-app#readme",
+  "description": ""
 }
